# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Script tn3270-screen shows the login screen from mainframe TN3270
  Telnet services, including any hidden fields. The script is accompanied by
  the new tn3270 library. [Soldier of Fortran]

o [NSE] Script nje-pass-brute brute-forces the password to a NJE node, given a
  valid RHOST and OHOST. Helpfully, nje-node-brute can now brute force both of
  those values. [Soldier of Fortran]

o [NSE][GH#557] Script ssl-cert-intaddr will search for private IP addresses in
  TLS certificate fields and extensions. [Steve Benson]

o [GH#316] Added scan resume from Nmap's XML output. Now you can --resume a
  canceled scan from all 3 major output formats: -oN, -oG, and -oX.
  [Tudor Emil Coman]

o [Ndiff][GH#591] Fix a bug where hosts with the same IP but different
  hostnames were shown as changing hostnames between scans. Made sort stable
  with regard to hostnames. [Daniel Miller]

o [NSE][GH#533] Removed ssl-google-cert-catalog, since Google shut off that
  service at some point. Reported by Brian Morin.

o [NSE][GH#540] Add tls.servername script-arg for forcing a name to be used for
  TLS Server Name Indication extension. The argument overrides the default use
  of the host's targetname. [Bertrand Bonnefoy-Claudet]

o [NSE] Script fingerprint-strings will print the ASCII strings it finds in the
  service fingerprints that Nmap shows for unidentified services. [Daniel Miller]

o [GH#505] Updated Russian translation of Zenmap by Alexander Kozlov.

o [NSE][GH#588] Fix a crash in smb.lua when using smb-ls due to a
  floating-point number being passed to os.time ("bad argument").
  [Dallas Winger]

o [NSE][GH#596] Fix a bug in mysql.lua that caused authentication failures in
  mysql-brute and other scripts due to including a null terminator in the salt
  value. This bug affects Nmap 7.25BETA2 and later releases.  [Daniel Miller]

o The --open option now implies --defeat-rst-ratelimit. This may result in